# fastapi-antd-prochat

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/backend/apis/: agents.py  chat.py  embeddings.py  health_check.py  langchain_chat.py  retriever.py  translate.py
backend/backend/apis/knowledge/: index.py
backend/backend/apis/langgraph/: __init__.py
backend/backend/apis/ollama/: __init__.py
backend/backend/apis/rag/: simple.py
backend/backend/apis/upload/: file.py
backend/backend/config/: config.py
backend/backend/constants/: model.py
backend/backend/dals/: chat.py  file_dal.py  knownledge_dal.py
backend/backend/db/: chat_db.py
backend/backend/exception/: __init__.py
backend/backend/langchain/: agent_executor.py  huggingface_embeddings.py  model.py  prompt.py  vector_chroma.py
backend/backend/langchain/loader/: web_loader.py
backend/backend/langchain/rag/: storage.py
backend/backend/langchain/rag/embeddings/: zhipu.py
backend/backend/langchain/rag/loader/: pdf.py
backend/backend/langchain/templates/: question.py
backend/backend/schemas/: chat.py  embeddings.py  file_schema.py  knowledge_schema.py  response.py  translate.py
backend/backend/services/: chat_service.py  chat_stream.py  file_service.py  knowledge_service.py
backend/backend/services/langchain/: langchain_chat_stream.py  langchain_service.py
backend/backend/services/ollama/: ollama_service.py  ollama_stream.py
backend/backend/supabase/: supabase_client.py
backend/backend/utils/: message.py  pdf.py
backend/backend/zhipu_ai/: client.py
(+51 files in other folders)
