[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Magnesium- <yyong007@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
zhipuai = "^2.1.4.20230814"
supabase = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
